[package]
name = "chrome_devtools"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "chrome_devtools"
path = "main.rs"

[dependencies]
dom = { path = "../dom" }
dashmap = "3.11"
futures-util = "0.3"
indextree = { version = "4.2", features = ["deser"] }
log = "0.4"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "net", "stream"] }
tokio-tungstenite = "0.10"
tungstenite = "0.10"
devtools-protocol = { path = "../devtools-protocol" }
