[package]
name = "compiler"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "compiler"
path = "main.rs"

[dependencies]
dom = { path = "../dom", features = ["devtools"] }
dashmap = "3.11"
indextree = { version = "4.2", features = ["deser"] }
quick-xml = "0.18"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"
style = { path = "../style" }
spec = { path = "../spec" }
yoga = { path = "../yoga" }
codespan-reporting = "0.9.5"
clap = "2.33"
