[package]
name = "compiler"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "compiler"
path = "main.rs"

[dependencies]
dom = { path = "../dom", features = ["devtools"] }
dashmap = "3.11"
quick-xml = "0.18"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"
style = { path = "../style" }
yoga = { path = "../yoga" }
sass = { path = "../sass" }
codespan-reporting = "0.9.5"
clap = "2.33"
cssparser = "0.27"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
source-map-mappings = "0.5"
