[package]
name = "devtools-protocol"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11"
