[package]
name = "dom"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[features]
default = []
devtools = ["dashmap"]

[dependencies]
dashmap = { version = "3.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
style = { path = "../style" }
yoga = { path = "../yoga" }
selectors = "0.22"
cssparser = "0.27"
rhai = { version = "0.18", features = ["serde", "sync"] }
