[package]
name = "event"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[features]
c-event = []

[dependencies]
log = "0.4"
render = { path = "../render" }
dom = { path = "../dom" }

