[package]
name = "sass"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[build-dependencies]
bindgen = "0.54"
cc = "1.0"


# [target.'cfg(target_env = "msvc")'.build-dependencies]
