[package]
name = "spec"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
proc-macro = true

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
