[package]
name = "style"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yoga = { path = "../yoga" }
cssparser = "0.27"
selectors = "0.22"