[package]
name = "winit-adapter"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[features]
debug = ["webrender/capture", "webrender/debugger", "webrender/profiler"]

[dependencies]
dom = { path = "../dom" }
render = { path = "../render" }
event = { path = "../event" }
gleam = "0.12"
glutin = "0.24"
webrender = { git = "https://github.com/servo/webrender" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7"
