[package]
name = "docgen"
version = "0.1.0"
authors = ["Zachary Vacura <zach@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.24", features = ["clang_8_0"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"